# rabbitmq-two-connections

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: app.py
